--- a/HTMLmanipulator.cfg
+++ b/HTMLmanipulator.cfg
@@ -1,92 +1,42 @@
 {
   "TASK_01_01": {
-    "DIRECTORY": "./data/LuciadRIA/docs",
-    "FILE_MASK" : "samples.html",
-    "OUTPUT" : "./out/LuciadRIA/docs",
+    "DIRECTORY": "./testdata/data/html",
+    "FILE_MASK" : "*.html",
+    "OUTPUT" : "./out/html",
     "STEP_01": {
       "HTML_TARGET_MATCH": "nav#navbar",
-      "HTML_REPLACEMENT": "./platform/samples/navbar.html",
+      "HTML_REPLACEMENT": "./testdata/templates/samples01/navbar.html",
       "ACTION": "REPLACE_WITH",
       "WHICH": "FIRST"
     },
     "STEP_02": {
-      "ACTION": "REPLACE",
-      "HTML_TARGET_MATCH": "head",
-      "HTML_REPLACEMENT": "./platform/components/header_samples.html",
+      "HTML_TARGET_MATCH": ".class1",
+      "VALUE": "class10 class12",
+      "ACTION": "ADD_CLASS",
       "WHICH": "FIRST"
     },
-	"STEP_03": {
+    "STEP_03": {
+      "HTML_TARGET_MATCH": ".class1",
+      "VALUE": "class1",
+      "ACTION": "REMOVE_CLASS",
+      "WHICH": "FIRST"
+    },
+    "STEP_04": {
+      "HTML_TARGET_MATCH": "#delete",
+      "VALUE": "delete",
       "ACTION": "DELETE",
-      "HTML_TARGET_MATCH": "button[data-sample^=samples]",
-      "WHICH": "ALL"
-    },
-	"STEP_04": {
-      "ACTION": "APPEND",
-      "HTML_TARGET_MATCH": "body",
-      "HTML_REPLACEMENT": "./platform/commons/userprofilebutton.html",
-      "WHICH": "LAST"
-    },
-	"STEP_06": {
-      "ACTION": "ATTR_REPLACE",
-      "HTML_TARGET_MATCH": "div[class=jumbotron]",
-      "ATTR": "subtitle",
-      "VALUE" : "Discover the many components and connectors to visualize and analyze geospatial data in 2-D and 3-D",
       "WHICH": "FIRST"
     },
-	"STEP_08": {
-      "ACTION": "ATTR_REPLACE_SUBSTR",
-      "HTML_TARGET_MATCH": "a[href^=http://server_link/web]",
-      "SUBSTR" : "http://server_link/web",
-      "ATTR": "href",
-      "VALUE" : "/portal",
-      "WHICH": "ALL"
-    },
-    "STEP_08_01": {
-      "ACTION": "ATTR_REPLACE_SUBSTR",
-      "HTML_TARGET_MATCH": "a[href^=SERVER_ADDRESS_PLACEHOLDER/packed-samples]",
-      "SUBSTR" : "/packed-samples/",
-      "ATTR": "href",
-      "VALUE" : "/portal/packed-samples/",
-      "WHICH": "ALL"
-    },
-	"STEP_09": {
-      "ACTION": "APPEND",
-      "HTML_TARGET_MATCH": "a[class=thumbnail]",
-      "HTML_REPLACEMENT": "./platform/components/play_icon_button.html",
-      "WHICH": "ALL"
-    },
-    "STEP_10": {
-      "ACTION": "DELETE",
-      "HTML_TARGET_MATCH": "div#alert-sampleservice",
-      "WHICH": "ALL"
-    },
-    "STEP_11": {
-      "ACTION": "APPEND",
-      "HTML_TARGET_MATCH": "body",
-      "HTML_REPLACEMENT": "./platform/components/triggersamples.html",
-      "WHICH": "LAST"
-    },
-  },
-  "TASK_01_02": {
-    "DIRECTORY": "./platform/samples",
-    "FILE_MASK" : "samples_ria_geometry.html",
-    "OUTPUT" : "./out/LuciadRIA/docs",
-    "STEP_01": {
-      "HTML_TARGET_MATCH": "nav#navbar",
-      "HTML_REPLACEMENT": "./platform/samples/navbar.html",
-      "ACTION": "REPLACE_WITH",
-      "WHICH": "FIRST"
-    }
-  },
-  "TASK_01_03": {
-    "DIRECTORY": "./platform/samples",
-    "FILE_MASK" : "samples_ria_symbology.html",
-    "OUTPUT" : "./out/LuciadRIA/docs",
-    "STEP_01": {
-      "HTML_TARGET_MATCH": "nav#navbar",
-      "HTML_REPLACEMENT": "./platform/samples/navbar.html",
-      "ACTION": "REPLACE_WITH",
-      "WHICH": "FIRST"
-    }
+    "STEP_05": {
+          "HTML_TARGET_MATCH": ".wrap",
+	      "VALUE": "<div class=\"container\"><div class=\"row\" id=\"megarow\"></div></div>",
+          "ACTION": "WRAP",
+          "WHICH": "ALL"
+        },
+     "STEP_06": {
+           "HTML_TARGET_MATCH": ".unwrap",
+           "ACTION": "UNWRAP",
+           "WHICH": "ALL"
+         }
   }
 }
